# sangsang

./: .gitignore  PLAN.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: android-release.yml  ci.yml  website-deploy.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 151c3d4befa3_add_google_id_to_users.py  49e7713da53a_add_relationship_table.py  a7dde9049673_add_password_reset_fields.py  ad44940fd57c_initial.py  b2e422fc78b3_add_email_verification.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: admin.py  analytics.py  auth.py  categories.py  relationships.py  transactions.py  users.py
backend/app/core/: config.py  database.py  limiter.py  security.py
backend/app/db/: seed.py
backend/app/models/: __init__.py  base.py  category.py  relationship.py  transaction.py  user.py
backend/app/schemas/: category.py  relationship.py  transaction.py  user.py
backend/scripts/: create_superuser.py
backend/tests/: conftest.py  test_admin.py  test_analytics.py  test_auth.py  test_google_auth.py  test_relationships.py  test_transactions.py
docs/: 01-backend-deploy-railway.md  02-website-deploy-pages.md  03-android-release.md  04-play-submission.md  PROJECT_STATUS.md
frontend/admin/: package.json  (+1 more)
frontend/admin-dashboard/: nginx.conf  package-lock.json  package.json
scripts/: make_icons.py  make_screenshots.py
website/: 404.html  app-ads.txt  index.html  privacy.html  robots.txt  sitemap.xml  style.css  support.html  terms.html
(+68 files in other folders)
