[tool.poetry]
name = "sangbu-sangjo-backend"
version = "0.1.0"
description = "상부상조 - 한국형 금융 관계 관리 플랫폼 Backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = {version = "^2.9.0", optional = true}
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"
python-multipart = "^0.0.9"
redis = "^5.0.0"
google-auth = {extras = ["requests"], version = "^2.53.0"}
slowapi = "^0.1.9"

[tool.poetry.extras]
postgresql = ["psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
